--- a/form.html
+++ b/form.html
@@ -9,20 +9,21 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="logo-container">
-        <div class="logo logo1">
-            <img src="img/unifae.png" alt="Unifae Logo">
+    <main>
+        <div class="logo-container">
+            <div class="logo logo1">
+                <img src="img/unifae.png" alt="Unifae Logo">
+            </div>
+            <div class="logo logo2">
+                <img src="img/sempher.png" alt="Sempher Logo">
+            </div>
+            <div class="logo logo3">
+                <img src="img/asw.png" alt="AWS Logo">
+            </div>
         </div>
-        <div class="logo logo2">
-            <img src="img/sempher.png" alt="Sempher Logo">
-        </div>
-        <div class="logo logo3">
-            <img src="img/aws.png" alt="AWS Logo">
-        </div>
-    </div>
-    <div class="container">
+        <div class="card-container">
 
-    </div>
-
+        </div>
+    </main>
 </body>
 </html>
