--- a/index.html
+++ b/index.html
@@ -22,7 +22,22 @@
             </div>
         </div>
         <div class="card-container">
-                
+             <div class="info-container">
+                <h3 class="info-title">Transforme suas ideias em soluções digitais com a Sempher Solutions!</h3>
+                <p class="info-p">
+                    Juntamente com a UNIFAE, iremos promover uma ação promocional no dia
+                </p>
+                <h3 class="info-date">21/10/2024</h3>
+                <p class="info-p">
+                    para celebrar a nossa parceria e a inovação tecnológica!
+                </p>
+                <p class="info-participar">
+                    Para participar, clique no botão abaixo!
+                </p>
+                <a href="form.html" class="btn-participar">
+                    Participar
+                </a>
+             </div>           
         </div>    
     </main>
 </body>
