--- a/form.html
+++ b/form.html
@@ -6,6 +6,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/header.css">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
@@ -22,7 +23,22 @@
             </div>
         </div>
         <div class="card-container">
+            <div class="thanks-container">
 
+                <img class="success" src="img/success.png" alt="Sucesso">
+                <h1>OBRIGADO!</h1>
+
+                <p class="part">Você está participando!</p>
+                <p class="text-insta">Acompanhe o instagram da Engenharia de Software da UNIFAE para saber mais sobre a ação!</p>
+
+                <div class="link-instagram">
+                    <a href="https://www.instagram.com/engsoftware.unifae/" target="_blank">
+                    <img class="instagram" src="img/instagram.png" alt="Logo instagram">
+                    <p>Engenharia de Software</p>
+                    </a>
+                </div>
+
+            </div>
         </div>
     </main>
 </body>
