--- a/form.html
+++ b/form.html
@@ -9,6 +9,21 @@
     <title>Document</title>
 </head>
 <body>
+
+<dialog>
+    <div>
+        <div class="dialog-header">
+            <button class="close-button"><img src="img/x-solid.svg" alt="close-icon"></button>
+        </div>
+    </div>
+    <video id="video" width="400" height="400" autoplay></video>
+    <canvas id="canvas" width="400" height="400"></canvas>
+    <div class="photo-button-container">
+    <p>Favor tirar a foto em um ambiente claro</p>
+        <button>Tirar foto</button>
+    </div>
+</dialog>
+
 <main>
     <div class="logo-container">
         <div class="logo logo1">
@@ -24,7 +39,7 @@
     <div class="card-container">
         <form class="form-container" enctype="multipart/form-data">
             <h1 class="titulo-form">Preencha o Formulário</h1>
-            <div class="form-input-container" >
+            <div class="form-input-container">
                 <label>Nome Completo</label>
                 <input type="text" name="nome" id="nome" placeholder="Insira seu nome completo">
             </div>
@@ -35,33 +50,27 @@
             </div>
 
             <div class="form-input-container">
-            <label for="matricula">Matricula/RA</label>
-            <input type="text" name="matricula" id="matricula" placeholder="Digite seu RA:">
+                <label for="matricula">Matricula/RA</label>
+                <input type="text" name="matricula" id="matricula" placeholder="Digite seu RA:">
             </div>
 
             <div class="form-input-container">
-            <label for="dt_nascimento">Data de nascimento</label>
-            <input type="date" name="dt_nascimento" id="dt_nascimento" placeholder="XX/XX/XXXX">
+                <label for="dt_nascimento">Data de nascimento</label>
+                <input type="date" name="dt_nascimento" id="dt_nascimento" placeholder="XX/XX/XXXX">
             </div>
-        <div class="foto-form">
-            <label for="foto">Insira uma foto do seu rosto: </label>
-
-            <dialog>
-                <h1>teste</h1>
-            </dialog>
-
-            <button id="foto-button" type="button">
-                <img src="img/camera-solid.svg">
-            </button>
-            <input id="foto" name="foto" type="file" hidden>
-        </div>
+            <div class="foto-form">
+                <label for="foto">Insira uma foto do seu rosto: </label>
+                <button id="foto-button" type="button">
+                    <img alt="camera-icon" src="img/camera-solid.svg">
+                </button>
+                <input id="foto" name="foto" type="file" hidden>
+            </div>
             <div class="botao">
                 <button type="submit">Enviar</button>
             </div>
         </form>
     </div>
 </main>
-
-<script src="js/script.js"></script>
+<script src="js/script.mjs" type="module"></script>
 </body>
 </html>
