--- a/form.html
+++ b/form.html
@@ -6,7 +6,11 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/header.css">
-    <title>Document</title>
+    <link rel="icon" href="img/logo-unifae.jpg">
+    <script src="js/jquery-3.7.1.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script src="js/script.js"></script>
+    <title>Ação Promocional</title>
 </head>
 <body>
 <main>
@@ -49,7 +53,7 @@
         </div>
 
             <div class="botao">
-                <button type="submit">Enviar</button>
+                <button class="formulario">Enviar</button>
             </div>
         </form>
 
