--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/header.css">
-    <link rel="icon" href="img/sempher-logo-icon.jpg">
-    <title>Document</title>
+    <link rel="icon" href="img/logo-unifae.jpg">
+    <title>Ação Promocional</title>
 </head>
 <body>
     <main>
@@ -22,7 +22,7 @@
                 <img src="img/asw.png" alt="AWS Logo">
             </div>
         </div>
-        <div class="card-container">
+        <div class="container">
              <div class="info-container">
                 <h3 class="info-title">Transforme suas ideias em soluções digitais com a Sempher Solutions!</h3>
                 <p class="info-p">
@@ -32,6 +32,7 @@
                 <p class="info-p">
                     para celebrar a nossa parceria e a inovação tecnológica!
                 </p>
+                <h3 class="info-date-close">O cadastro se encerra no dia: 18/10/2024</h3>
                 <p class="info-participar">
                     Para participar, clique no botão abaixo!
                 </p>
