--- a/success.html
+++ b/success.html
@@ -6,8 +6,9 @@
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="css/header.css">
+  <link rel="icon" href="img/logo-unifae.jpg">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-  <title>Document</title>
+  <title>Ação Promocional</title>
 </head>
 <body>
 <main>
