--- a/form.html
+++ b/form.html
@@ -77,5 +77,6 @@
     </div>
 </main>
 <script src="js/script.mjs" type="module"></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
 </html>
