--- a/form.html
+++ b/form.html
@@ -7,28 +7,35 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/header.css">
     <link rel="icon" href="img/logo-unifae.jpg">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>Ação Promocional</title>
 </head>
 <body>
 
-<dialog>
-    <div>
-        <div class="dialog-header">
-            <button class="close-button"><img src="img/x-solid.svg" alt="close-icon"></button>
+    
+    <main>
+        <div class="modal">
+            <div class="modal-dialog modal-dialog-centered">
+                <div class="modal-content">
+                    <div class="modal-header d-flex justify-content-end">
+                        <button class="close-button" data-bs-dismiss="modal" aria-label="Close"><img src="img/x-solid.svg" alt="close-icon"></button>
+                    </div>
+                    <div class="modal-body">
+                        <div class="d-flex justify-content-center align-center">
+                            <video id="video" width="300" height="300" autoplay></video>
+                            <canvas id="canvas" width="300" height="225" style="margin:38px 0px;"></canvas>
+                        </div>
+                        <p class="text-center">Favor tirar a foto em um ambiente claro</p>
+                        <div class="photo-button-container modal-footer">
+                            <img src="img/rotate-right-solid.svg" width="20" height="20" alt="tirar outra foto">
+                            <button id="take-photo-btn">Tirar foto</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-    </div>
-    <video id="video" width="400" height="400" autoplay></video>
-    <canvas id="canvas" width="400" height="300" style="margin:51px 0px;"></canvas>
-    <div class="photo-button-container">
-    <p>Favor tirar a foto em um ambiente claro</p>
-        <img src="img/rotate-right-solid.svg" width="20" height="20" alt="tirar outra foto">
-        <button id="take-photo-btn">Tirar foto</button>
-    </div>
-</dialog>
-
-<main>
-    <div class="logo-container">
-        <div class="logo logo1">
+        <div class="logo-container">
+            <div class="logo logo1">
             <img src="img/unifae.png" alt="Unifae Logo">
         </div>
         <div class="logo logo2">
@@ -62,7 +69,7 @@
             </div>
             <div class="foto-form">
                 <label for="foto">Insira uma foto do seu rosto: </label>
-                <button id="foto-button" type="button">
+                <button id="foto-button" type="button" data-bs-toggle="modal" data-bs-target=".modal">
                     <img alt="camera-icon" src="img/camera-solid.svg">
                 </button>
                 <img src="img/check-solid.svg" width="20" height="20">
@@ -74,6 +81,8 @@
     </div>
 </main>
 <script src="js/script.mjs" type="module"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
 </html>
