--- a/form.html
+++ b/form.html
@@ -14,7 +14,7 @@
 
     
     <main>
-        <div class="modal">
+        <div class="modal fade" data-bs-backdrop="static">
             <div class="modal-dialog modal-dialog-centered">
                 <div class="modal-content">
                     <div class="modal-header d-flex justify-content-end">
@@ -22,8 +22,8 @@
                     </div>
                     <div class="modal-body">
                         <div class="d-flex justify-content-center align-center">
-                            <video id="video" width="300" height="300" autoplay></video>
-                            <canvas id="canvas" width="300" height="225" style="margin:38px 0px;"></canvas>
+                            <video id="video" autoplay></video>
+                            <canvas id="canvas"></canvas>
                         </div>
                         <p class="text-center">Favor tirar a foto em um ambiente claro</p>
                         <div class="photo-button-container modal-footer">
