--- a/form.html
+++ b/form.html
@@ -22,7 +22,7 @@
                     </div>
                     <div class="modal-body">
                         <div class="d-flex justify-content-center align-center">
-                            <video id="video" autoplay></video>
+                            <video id="video" autoplay playsinline></video>
                             <canvas id="canvas"></canvas>
                         </div>
                         <p class="text-center">Favor tirar a foto em um ambiente claro</p>
