--- a/form.html
+++ b/form.html
@@ -1,31 +1,40 @@
 <!doctype html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/header.css">
     <link rel="icon" href="img/logo-unifae.jpg">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>Ação Promocional</title>
 </head>
+
 <body>
 
-    
+
     <main>
         <div class="modal fade" data-bs-backdrop="static">
             <div class="modal-dialog modal-dialog-centered">
                 <div class="modal-content">
                     <div class="modal-header d-flex justify-content-end">
-                        <button class="close-button" data-bs-dismiss="modal" aria-label="Close"><img src="img/x-solid.svg" alt="close-icon"></button>
+                        <button class="close-button" data-bs-dismiss="modal" aria-label="Close"><img
+                                src="img/x-solid.svg" alt="close-icon"></button>
                     </div>
                     <div class="modal-body">
                         <div class="d-flex justify-content-center align-center">
                             <video id="video" autoplay playsinline></video>
                             <canvas id="canvas"></canvas>
                         </div>
-                        <p class="text-center">Favor tirar a foto em um ambiente claro</p>
+                        <div class="d-flex flex-column justify-content-center gap-1 pb-4">
+                            <span class="text-center">Instruções para tirar uma foto:</span>
+                            <span class="text-center">Certifique-se de que sua câmera esteja funcionando e que o
+                                ambiente esteja bem iluminado</span>
+                            <span class="text-center text-danger">Deve existir apenas uma pessoa na foto</span>
+                        </div>
                         <div class="photo-button-container modal-footer">
                             <img src="img/rotate-right-solid.svg" width="20" height="20" alt="tirar outra foto">
                             <button id="take-photo-btn">Tirar foto</button>
@@ -36,53 +45,58 @@
         </div>
         <div class="logo-container">
             <div class="logo logo1">
-            <img src="img/unifae.png" alt="Unifae Logo">
+                <img src="img/unifae.png" alt="Unifae Logo">
+            </div>
+            <div class="logo logo2">
+                <img src="img/sempher.png" alt="Sempher Logo">
+            </div>
+            <div class="logo logo3">
+                <img src="img/asw.png" alt="AWS Logo">
+            </div>
         </div>
-        <div class="logo logo2">
-            <img src="img/sempher.png" alt="Sempher Logo">
+        <div class="card-container">
+            <form class="form-container" enctype="multipart/form-data">
+                <h1 class="titulo-form">Preencha o Formulário</h1>
+                <div class="form-input-container">
+                    <label>Nome Completo</label>
+                    <input type="text" name="nome" id="nome" placeholder="Insira seu nome completo">
+                </div>
+
+                <div class="form-input-container">
+                    <label>E-mail</label>
+                    <input type="text" name="email" id="email" placeholder="Digite seu e-mail">
+                </div>
+
+                <div class="form-input-container">
+                    <label for="matricula">Matricula/RA</label>
+                    <input type="text" name="matricula" id="matricula" placeholder="Digite seu RA:">
+                </div>
+
+                <div class="form-input-container">
+                    <label for="dt_nascimento">Data de nascimento</label>
+                    <input type="date" name="dt_nascimento" id="dt_nascimento" placeholder="XX/XX/XXXX">
+                </div>
+                <div class="foto-form">
+                    <label for="foto">Insira uma foto do seu rosto: </label>
+                    <button id="foto-button" type="button" data-bs-toggle="modal" data-bs-target=".modal">
+                        <img alt="camera-icon" src="img/camera-solid.svg">
+                    </button>
+                    <img src="img/check-solid.svg" width="20" height="20">
+                </div>
+                <div class="botao">
+                    <button class="formulario">Enviar</button>
+                </div>
+            </form>
         </div>
-        <div class="logo logo3">
-            <img src="img/asw.png" alt="AWS Logo">
-        </div>
-    </div>
-    <div class="card-container">
-        <form class="form-container" enctype="multipart/form-data">
-            <h1 class="titulo-form">Preencha o Formulário</h1>
-            <div class="form-input-container">
-                <label>Nome Completo</label>
-                <input type="text" name="nome" id="nome" placeholder="Insira seu nome completo">
-            </div>
-
-            <div class="form-input-container">
-                <label>E-mail</label>
-                <input type="text" name="email" id="email" placeholder="Digite seu e-mail">
-            </div>
-
-            <div class="form-input-container">
-                <label for="matricula">Matricula/RA</label>
-                <input type="text" name="matricula" id="matricula" placeholder="Digite seu RA:">
-            </div>
-
-            <div class="form-input-container">
-                <label for="dt_nascimento">Data de nascimento</label>
-                <input type="date" name="dt_nascimento" id="dt_nascimento" placeholder="XX/XX/XXXX">
-            </div>
-            <div class="foto-form">
-                <label for="foto">Insira uma foto do seu rosto: </label>
-                <button id="foto-button" type="button" data-bs-toggle="modal" data-bs-target=".modal">
-                    <img alt="camera-icon" src="img/camera-solid.svg">
-                </button>
-                <img src="img/check-solid.svg" width="20" height="20">
-            </div>
-            <div class="botao">
-                <button class="formulario">Enviar</button>
-            </div>
-        </form>
-    </div>
-</main>
-<script src="js/script.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    </main>
+    <script src="js/script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+        integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
+
 </html>
