--- a/form.html
+++ b/form.html
@@ -64,7 +64,7 @@
 
                 <div class="form-input-container">
                     <label>E-mail</label>
-                    <input type="text" name="email" id="email" placeholder="Digite seu e-mail">
+                    <input type="email" name="email" id="email" placeholder="Digite seu e-mail">
                 </div>
 
                 <div class="form-input-container">
