Desenvolvido pelo SoftJr

--- a/success.html
+++ b/success.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="css/header.css">
   <link rel="icon" href="img/logo-unifae.jpg">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <title>Ação Promocional</title>
 </head>
 <body>
@@ -38,5 +39,6 @@
     </div>
   </div>
 </main>
+<p class="softjr">Desenvolvido com <i class="fa fa-heart-o"></i> pelo <a href="https://labsoft-unifae.com.br/" class="link-softjr" target="_blank">SoftJr</a></p>
 </body>
 </html>
