--- a/index.html
+++ b/index.html
@@ -25,17 +25,26 @@
         </div>
         <div class="container">
              <div class="info-container">
-                <h3 class="info-title">Transforme suas ideias em soluções digitais com a Sempher Solutions!</h3>
+                <h3 class="info-title">Celebre os 10 anos de Engenharia de Software da UNIFAE com a Sempher Solutions!</h3>
                 <p class="info-p">
-                    Juntamente com a UNIFAE, iremos promover uma ação promocional no dia
+                    Neste marco especial, a Sempher Solutions, em parceria com o SoftJr, convida você a explorar um mundo de inovação e tecnologia. Durante a Semana de Engenharia de Software, nossa empresa promoverá uma ação especial.
                 </p>
+                <p class="info-p">
+                    Para participar dessa celebração tecnológica e vivenciar uma experiência única sobre nossos produtos e o universo digital, cadastre-se agora neste formulário.
+                </p>
+                <p class="info-p">
+                    O prazo para cadastro vai até
+                </p>
+
                 <h3 class="info-date">21/10/2024</h3>
+                
                 <p class="info-p">
-                    para celebrar a nossa parceria e a inovação tecnológica!
+                    Não perca a chance de se conectar com o futuro e participar da nossa ação ao longo do evento!
+                    Vem com a gente nessa jornada de inovação!
                 </p>
-                <h3 class="info-date-close">O cadastro se encerra no dia: 18/10/2024</h3>
+                <h3 class="info-date-close">O prazo para cadastro vai até 18/10/2024.</h3>
                 <p class="info-participar">
-                    Para participar, clique no botão abaixo!
+                    Clique no botão abaixo e inscreva-se!
                 </p>
                 <a href="form.html" class="btn-participar">
                     Participar
@@ -43,5 +52,6 @@
              </div>           
         </div>    
     </main>
+    <p class="softjr">Desenvolvido com <i class="fa fa-heart-o"></i> pelo <a href="https://labsoft-unifae.com.br/" class="link-softjr" target="_blank">SoftJr</a></p>
 </body>
 </html>
