--- a/index.html
+++ b/index.html
@@ -35,18 +35,12 @@
                 <p class="info-p">
                     O prazo para cadastro vai até
                 </p>
-
-                <h3 class="info-date">21/10/2024</h3>
-                
+                    <strong class="info-date">18/10/2024</strong>
                 <p class="info-p">
                     Não perca a chance de se conectar com o futuro e participar da nossa ação ao longo do evento!
-                    Vem com a gente nessa jornada de inovação!
-                    Não perca a chance de se conectar com o futuro e participar da nossa ação ao longo do evento!
-                    Vem com a gente nessa jornada de inovação!
                 </p>
-                <h3 class="info-date-close">O prazo para cadastro vai até 18/10/2024.</h3>
+                <h3 class="info-date-close">Vem com a gente nessa jornada de inovação!</h3>
                 <p class="info-participar">
-                    Clique no botão abaixo e inscreva-se!
                     Clique no botão abaixo e inscreva-se!
                 </p>
                 <a href="form.html" class="btn-participar">
