--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
              <div class="info-container">
                 <h3 class="info-title">Celebre os 10 anos de Engenharia de Software da UNIFAE com a Sempher Solutions!</h3>
                 <p class="info-p">
-                    Neste marco especial, a Sempher Solutions, em parceria com o SoftJr, convida você a explorar um mundo de inovação e tecnologia. Durante a Semana de Engenharia de Software, nossa empresa promoverá uma ação especial.
+                    Neste marco especial, a Sempher Solutions, em parceria com o SoftJr, convida você a explorar um mundo de inovação e tecnologia. Durante a Semana de Engenharia de Software da UNIFAE, nossa empresa promoverá uma ação especial.
                 </p>
                 <p class="info-p">
                     Para participar dessa celebração tecnológica e vivenciar uma experiência única sobre nossos produtos e o universo digital, cadastre-se agora neste formulário.
@@ -40,9 +40,10 @@
                     Não perca a chance de se conectar com o futuro e participar da nossa ação ao longo do evento!
                 </p>
                 <h3 class="info-date-close">Vem com a gente nessa jornada de inovação!</h3>
-                <p class="info-participar">
-                    Clique no botão abaixo e inscreva-se!
-                </p>
+                <div class="info-participar">
+                    <p>Clique no botão abaixo e inscreva-se!</p>
+                    <p>*Evento exclusivo para os alunos de Engenharia de Software da UNIFAE</p>
+                </div>
                 <a href="form.html" class="btn-participar">
                     Participar
                 </a>
