--- a/form.html
+++ b/form.html
@@ -98,7 +98,7 @@
                     <input type="date" name="dt_nascimento" id="dt_nascimento" placeholder="XX/XX/XXXX">
                 </div>
                 <div class="foto-form">
-                    <label for="foto">Insira uma foto do seu rosto: </label>
+                    <label for="foto">Tire uma foto de seu rosto: </label>
                     <button id="foto-button" type="button" data-bs-toggle="modal" data-bs-target="#foto-modal">
                         <img alt="camera-icon" src="img/camera-solid.svg">
                     </button>
@@ -115,7 +115,7 @@
         </div>
     </main>
     <p class="softjr">Desenvolvido com <i class="fa fa-heart-o"></i> pelo <a href="https://labsoft-unifae.com.br/" class="link-softjr" target="_blank">SoftJr</a></p>
-    <script src="js/script.min.js"></script>
+    <script src="js/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
         integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
         crossorigin="anonymous"></script>
