changed index text

--- a/index.html
+++ b/index.html
@@ -32,21 +32,10 @@
                 <p class="info-p">
                     Para participar dessa celebração tecnológica e vivenciar uma experiência única sobre nossos produtos e o universo digital, cadastre-se agora neste formulário.
                 </p>
-                <p class="info-p">
-                    O prazo para cadastro vai até
-                </p>
-                    <strong class="info-date">18/10/2024</strong>
-                <p class="info-p">
-                    Não perca a chance de se conectar com o futuro e participar da nossa ação ao longo do evento!
-                </p>
-                <h3 class="info-date-close">Vem com a gente nessa jornada de inovação!</h3>
                 <div class="info-participar">
-                    <p>Clique no botão abaixo e inscreva-se!</p>
-                    <p>*Evento exclusivo para os alunos de Engenharia de Software da UNIFAE</p>
+                    <p>As inscrições encerraram!</p>
                 </div>
-                <a href="form.html" class="btn-participar">
-                    Participar
-                </a>
+                <h3 class="info-title">Nos vemos em breve!</h3>
              </div>           
         </div>    
     </main>
